--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todo-app</title>
     <!-- IBSheet8 CSS -->
-    <link rel="stylesheet" type="text/css" href="https://demo.ibleaders.com/ibsheet/v8/samples/customer-sample/assets/lib/ibsheet.css">
+    <link rel="stylesheet" href="https://www.ibsheet.com/v8/assets/lib/ibsheet/css/default/main.css"/>
     <!-- IBSheet8 Scripts -->
     <script src="https://www.ibsheet.com/v8/assets/lib/iblicense.js"></script>
     <script src="https://www.ibsheet.com/v8/assets/lib/ibsheet/ibsheet.js"></script>
